Mono. Lights & Physics

--- a/GameEngine/GameEngine.vcxproj
+++ b/GameEngine/GameEngine.vcxproj
@@ -154,6 +154,8 @@
     <ClCompile Include="Engine\Features\Physics\Systems\CollisionSystem.cpp" />
     <ClCompile Include="Engine\Features\Rendering\RenderPipeline\EditorGridRenderSystem.cpp" />
     <ClCompile Include="Engine\Mono\Components\MonoSyncComp.h" />
+    <ClCompile Include="Engine\Mono\Helpers\SyMonoHashHelper.cpp" />
+    <ClCompile Include="Engine\Mono\Helpers\SyMonoHashHelper.h" />
     <ClCompile Include="Engine\Mono\SyMono.cpp" />
     <ClCompile Include="Engine\Mono\SyMonoProxyDatas.h" />
     <ClCompile Include="Engine\Mono\Objects\SyMonoGame.cpp" />
