--- a/GameEngine/GameEngine.vcxproj.filters
+++ b/GameEngine/GameEngine.vcxproj.filters
@@ -102,6 +102,8 @@
     <ClCompile Include="Engine\Features\Rendering\RenderPipeline\ParticleRenderSystem.cpp" />
     <ClCompile Include="Engine\Features\Rendering\RenderPipeline\EditorColliderRenderSystem.cpp" />
     <ClCompile Include="Engine\Mono\Systems\MonoSyncEgSystem.cpp" />
+    <ClCompile Include="Engine\Mono\Helpers\SyMonoHashHelper.h" />
+    <ClCompile Include="Engine\Mono\Helpers\SyMonoHashHelper.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\..\Downloads\stb_image.h" />
@@ -218,9 +220,6 @@
     <ClInclude Include="Engine\Mono\SyMonoRuntime.h" />
     <ClInclude Include="Engine\Mono\Systems\MonoSyncGeSystem.h" />
     <ClInclude Include="Engine\Mono\SyMonoMethod.h" />
-    <ClInclude Include="Engine\Core\ECS\Event.h" />
-    <ClInclude Include="Engine\Systems\PrepareEventsSystem.h" />
-    <ClInclude Include="Engine\Tools\MathHelper.h" />
     <ClInclude Include="Matrix4x4.h" />
     <ClInclude Include="Engine\Mono\Objects\SyMonoLogger.h" />
     <ClInclude Include="Engine\Mono\Objects\SyMonoEcs.h" />
@@ -241,7 +240,6 @@
     <ClInclude Include="vendor\ImGui\ImCurve.h" />
     <ClInclude Include="Engine\Mono\Systems\MonoSyncEgSystem.h" />
     <ClInclude Include="Engine\Mono\Objects\ISyMonoEditorCallbacks.h" />
-    <ClInclude Include="Engine\Tools\HashHelper.h" />
     <ClInclude Include="Engine\Events\SyHotReloadEvent.h" />
     <ClInclude Include="Engine\Events\SyImageBasedLightingUpdateEvent.h" />
     <ClInclude Include="Engine\Features\Physics\Events\SyOnCreateColliderEvent.h" />
