--- a/MonoLayer/MonoLayer.csproj
+++ b/MonoLayer/MonoLayer.csproj
@@ -39,7 +39,11 @@
         <Reference Include="System.Xml"/>
     </ItemGroup>
     <ItemGroup>
+        <Compile Include="Core\Comps\ColliderComp.cs" />
         <Compile Include="Core\Helpers\TypesExt.cs" />
+        <Compile Include="Core\ProxyComps\ProxyColliderComp.cs" />
+        <Compile Include="Core\ProxyComps\ProxyLightComp.cs" />
+        <Compile Include="Core\ProxyComps\ProxyRigidComp.cs" />
         <Compile Include="Core\Resources\EResourceType.cs" />
         <Compile Include="Core\Resources\ResHelper.cs" />
         <Compile Include="Core\Resources\SyResManager.cs" />
