--- a/GameEngine/GameEngine.vcxproj.filters
+++ b/GameEngine/GameEngine.vcxproj.filters
@@ -105,6 +105,7 @@
     <ClCompile Include="Engine\Mono\Helpers\SyMonoHashHelper.h" />
     <ClCompile Include="Engine\Mono\Helpers\SyMonoHashHelper.cpp" />
     <ClCompile Include="Engine\Mono\SyMonoStr.cpp" />
+    <ClCompile Include="Engine\Mono\Systems\MonoHotReloadSystem.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\..\Downloads\stb_image.h" />
@@ -252,6 +253,7 @@
     <ClInclude Include="Engine\Features\Rendering\RenderPipeline\EditorColliderRenderSystem.h" />
     <ClInclude Include="Engine\Features\Events\Tags\SyEventTag.h" />
     <ClInclude Include="Engine\Mono\SyMonoStr.h" />
+    <ClInclude Include="Engine\Mono\Systems\MonoHotReloadSystem.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="Engine\Assets\SkyBox\skybox_1.png" />
