--- a/GameEngine/GameEngine.vcxproj.filters
+++ b/GameEngine/GameEngine.vcxproj.filters
@@ -36,7 +36,6 @@
     <ClCompile Include="Engine\Systems\Rendering\RenderPipeline\ShadowRenderSystem.cpp" />
     <ClCompile Include="Engine\Tools\ErrorLogger.cpp" />
     <ClCompile Include="Engine\Tools\ImageLoader.cpp" />
-    <ClCompile Include="Engine\Components\ParticleComponent.cpp" />
     <ClCompile Include="Engine\Components\Particle.cpp" />
     <ClCompile Include="Engine\Systems\TransformSystem.cpp" />
     <ClCompile Include="Engine\Systems\TransformHelper.cpp" />
@@ -100,6 +99,7 @@
     <ClCompile Include="Engine\Tools\Data\Vector.cpp" />
     <ClCompile Include="Engine\Systems\ParticlesSystem.cpp" />
     <ClCompile Include="Engine\Systems\Rendering\RenderPipeline\ParticleRenderSystem.cpp" />
+    <ClCompile Include="Engine\Systems\CollisionPreSystem.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\..\Downloads\stb_image.h" />
@@ -243,6 +243,57 @@
     <ClInclude Include="Engine\Systems\Rendering\RenderPipeline\ParticleRenderSystem.h" />
     <ClInclude Include="vendor\ImGui\curve_v122.hpp" />
     <ClInclude Include="vendor\ImGui\ImCurve.h" />
+    <ClInclude Include="Engine\Systems\CollisionPreSystem.h" />
+    <ClInclude Include="vendor\entt\resource\cache.hpp" />
+    <ClInclude Include="vendor\entt\resource\fwd.hpp" />
+    <ClInclude Include="vendor\entt\resource\loader.hpp" />
+    <ClInclude Include="vendor\entt\resource\resource.hpp" />
+    <ClInclude Include="vendor\entt\core\algorithm.hpp" />
+    <ClInclude Include="vendor\entt\core\any.hpp" />
+    <ClInclude Include="vendor\entt\core\attribute.h" />
+    <ClInclude Include="vendor\entt\core\compressed_pair.hpp" />
+    <ClInclude Include="vendor\entt\core\enum.hpp" />
+    <ClInclude Include="vendor\entt\core\family.hpp" />
+    <ClInclude Include="vendor\entt\core\fwd.hpp" />
+    <ClInclude Include="vendor\entt\core\hashed_string.hpp" />
+    <ClInclude Include="vendor\entt\core\ident.hpp" />
+    <ClInclude Include="vendor\entt\core\iterator.hpp" />
+    <ClInclude Include="vendor\entt\core\memory.hpp" />
+    <ClInclude Include="vendor\entt\core\monostate.hpp" />
+    <ClInclude Include="vendor\entt\core\tuple.hpp" />
+    <ClInclude Include="vendor\entt\core\type_info.hpp" />
+    <ClInclude Include="vendor\entt\core\type_traits.hpp" />
+    <ClInclude Include="vendor\entt\core\utility.hpp" />
+    <ClInclude Include="vendor\entt\entity\component.hpp" />
+    <ClInclude Include="vendor\entt\entity\entity.hpp" />
+    <ClInclude Include="vendor\entt\entity\fwd.hpp" />
+    <ClInclude Include="vendor\entt\entity\group.hpp" />
+    <ClInclude Include="vendor\entt\entity\handle.hpp" />
+    <ClInclude Include="vendor\entt\entity\helper.hpp" />
+    <ClInclude Include="vendor\entt\entity\mixin.hpp" />
+    <ClInclude Include="vendor\entt\entity\observer.hpp" />
+    <ClInclude Include="vendor\entt\entity\organizer.hpp" />
+    <ClInclude Include="vendor\entt\entity\registry.hpp" />
+    <ClInclude Include="vendor\entt\entity\runtime_view.hpp" />
+    <ClInclude Include="vendor\entt\entity\snapshot.hpp" />
+    <ClInclude Include="vendor\entt\entity\sparse_set.hpp" />
+    <ClInclude Include="vendor\entt\entity\storage.hpp" />
+    <ClInclude Include="vendor\entt\entity\view.hpp" />
+    <ClInclude Include="vendor\entt\meta\adl_pointer.hpp" />
+    <ClInclude Include="vendor\entt\meta\container.hpp" />
+    <ClInclude Include="vendor\entt\meta\context.hpp" />
+    <ClInclude Include="vendor\entt\meta\factory.hpp" />
+    <ClInclude Include="vendor\entt\meta\fwd.hpp" />
+    <ClInclude Include="vendor\entt\meta\meta.hpp" />
+    <ClInclude Include="vendor\entt\meta\node.hpp" />
+    <ClInclude Include="vendor\entt\meta\pointer.hpp" />
+    <ClInclude Include="vendor\entt\meta\policy.hpp" />
+    <ClInclude Include="vendor\entt\meta\range.hpp" />
+    <ClInclude Include="vendor\entt\meta\resolve.hpp" />
+    <ClInclude Include="vendor\entt\meta\template.hpp" />
+    <ClInclude Include="vendor\entt\meta\type_traits.hpp" />
+    <ClInclude Include="vendor\entt\meta\utility.hpp" />
+    <ClInclude Include="Engine\Components\Components.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="Engine\Assets\SkyBox\skybox_1.png" />
