--- a/GameEngine/GameEngine.vcxproj
+++ b/GameEngine/GameEngine.vcxproj
@@ -129,7 +129,8 @@
       <EntryPointName />
     </FxCompile>
     <PreBuildEvent>
-      <Command>$(SolutionDir)pre-build.bat $(SolutionDir)</Command>
+      <Command>
+      </Command>
     </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
