--- a/MonoLayer/MonoLayer.csproj
+++ b/MonoLayer/MonoLayer.csproj
@@ -16,7 +16,7 @@
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
         <PlatformTarget>AnyCPU</PlatformTarget>
         <DebugSymbols>true</DebugSymbols>
-        <DebugType>full</DebugType>
+        <DebugType>portable</DebugType>
         <Optimize>false</Optimize>
         <OutputPath>..\GameEngine\</OutputPath>
         <DefineConstants>DEBUG;TRACE</DefineConstants>
@@ -25,21 +25,23 @@
     </PropertyGroup>
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
         <PlatformTarget>AnyCPU</PlatformTarget>
-        <DebugType>pdbonly</DebugType>
+        <DebugType>portable</DebugType>
         <Optimize>true</Optimize>
         <OutputPath>bin\Release\</OutputPath>
         <DefineConstants>TRACE</DefineConstants>
         <ErrorReport>prompt</ErrorReport>
         <WarningLevel>4</WarningLevel>
+        <DebugSymbols>true</DebugSymbols>
     </PropertyGroup>
     <ItemGroup>
-        <Reference Include="System"/>
+        <Reference Include="System" />
         <Reference Include="System.Core"/>
         <Reference Include="System.Data"/>
         <Reference Include="System.Xml"/>
     </ItemGroup>
     <ItemGroup>
         <Compile Include="Core\Comps\ColliderComp.cs" />
+        <Compile Include="Core\Helpers\CollectionsExt.cs" />
         <Compile Include="Core\Helpers\TypesExt.cs" />
         <Compile Include="Core\ProxyComps\ProxyColliderComp.cs" />
         <Compile Include="Core\ProxyComps\ProxyLightComp.cs" />
@@ -76,7 +78,7 @@
         <Compile Include="Editor\Drawers\EditorDrawerComp.cs" />
         <Compile Include="Editor\Drawers\EditorDrawerCompLight.cs" />
         <Compile Include="Editor\Drawers\EditorDrawerReflect.cs" />
-        <Compile Include="Editor\Drawers\EditorDrawerEnumBase.cs" />
+        <Compile Include="Editor\Drawers\EditorDrawerEnum.cs" />
         <Compile Include="Editor\Drawers\EditorDrawerFloat.cs" />
         <Compile Include="Editor\Drawers\EditorDrawerInt.cs" />
         <Compile Include="Editor\Drawers\EditorDrawerCompTransform.cs" />
@@ -85,6 +87,7 @@
         <Compile Include="Editor\SyProxyEditor.cs" />
         <Compile Include="Game\SyGameConfigBase.cs" />
         <Compile Include="Game\SyProxyGame.cs" />
+        <Compile Include="Game\SyScene.cs" />
         <Compile Include="LeoEcs\components.cs" />
         <Compile Include="LeoEcs\entities.cs" />
         <Compile Include="LeoEcs\filters.cs" />
@@ -93,6 +96,19 @@
         <Compile Include="Logger\SyLog.cs" />
         <Compile Include="Logger\SyProxyLogger.cs" />
         <Compile Include="Properties\AssemblyInfo.cs"/>
+        <Compile Include="Serialization\Serializer.cs" />
+        <Compile Include="Serialization\Serializers\SerializerArray.cs" />
+        <Compile Include="Serialization\Serializers\SerializerBool.cs" />
+        <Compile Include="Serialization\Serializers\SerializerEnum.cs" />
+        <Compile Include="Serialization\Serializers\SerializerFloat.cs" />
+        <Compile Include="Serialization\Serializers\SerializerInt.cs" />
+        <Compile Include="Serialization\Serializers\SerializerList.cs" />
+        <Compile Include="Serialization\Serializers\SerializerObject.cs" />
+        <Compile Include="Serialization\Serializers\SerializerReflect.cs" />
+        <Compile Include="Serialization\Serializers\SerializerBase.cs" />
+        <Compile Include="Serialization\Serializers\SerializerResRef.cs" />
+        <Compile Include="Serialization\Serializers\SerializerString.cs" />
+        <Compile Include="Serialization\ThirdParty\SimpleJSON.cs" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets"/>
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
