--- a/MonoLayer/MonoLayer.csproj
+++ b/MonoLayer/MonoLayer.csproj
@@ -41,6 +41,7 @@
     </ItemGroup>
     <ItemGroup>
         <Compile Include="Core\Comps\ColliderComp.cs" />
+        <Compile Include="Core\Comps\NameComp.cs" />
         <Compile Include="Core\EEngineCompId.cs" />
         <Compile Include="Core\Helpers\CollectionsExt.cs" />
         <Compile Include="Core\Helpers\TypesExt.cs" />
