--- a/GameEngine/GameEngine.vcxproj
+++ b/GameEngine/GameEngine.vcxproj
@@ -71,7 +71,7 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>$(SolutionDir)GameEngine\vendor\nlohmann;$(SolutionDir)GameEngine\vendor\boost;$(SolutionDir)GameEngine\Engine\Assets\Shaders;$(SolutionDir)GameEngine\vendor\DirectXTK\Inc;$(SolutionDir)GameEngine\vendor\assimp\include;$(SolutionDir)GameEngine\Engine\DirectXSDK\assimp;$(SolutionDir)GameEngine\vendor\ImGui;$(SolutionDir)GameEngine\vendor\mono\include;$(SolutionDir)GameEngine\vendor\PhysX\physx\include;$(SolutionDir)GameEngine\vendor\entt;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)GameEngine\vendor\nlohmann;$(SolutionDir)GameEngine\vendor\boost;$(SolutionDir)GameEngine\Engine\Assets\Shaders;$(SolutionDir)GameEngine\vendor\DirectXTK\Inc;$(SolutionDir)GameEngine\vendor\assimp\include;$(SolutionDir)GameEngine\Engine\DirectXSDK\assimp;$(SolutionDir)GameEngine\vendor\ImGui;$(SolutionDir)GameEngine\vendor\mono\include;$(SolutionDir)GameEngine\vendor\PhysX\physx\include;$(SolutionDir)GameEngine\vendor\entt;$(SolutionDir)GameEngine\vendor\skeletalAnim;$(IncludePath)</IncludePath>
     <LibraryPath>$(SolutionDir)GameEngine\Engine\Libs\x64\Debug;$(LibraryPath)</LibraryPath>
     <OutDir>$(SolutionDir)\GameEngine\</OutDir>
   </PropertyGroup>
@@ -668,11 +668,24 @@
     <ClCompile Include="vendor\ImGui\imgui_impl_win32.cpp" />
     <ClCompile Include="vendor\ImGui\imgui_tables.cpp" />
     <ClCompile Include="vendor\ImGui\imgui_widgets.cpp" />
+    <ClCompile Include="vendor\skeletalAnim\AssimpConverter\AssimpConverter.cpp" />
+    <ClCompile Include="vendor\skeletalAnim\SkeletalAnimation\SkeletalModel.cpp" />
+    <ClCompile Include="vendor\skeletalAnim\SkeletalAnimation\SkeletalModelSerializer.cpp" />
+    <ClCompile Include="vendor\StateMachine\imgui_node_graph_test.cpp" />
+    <ClCompile Include="vendor\StateMachine\pugixml.cpp" />
+    <ClCompile Include="vendor\StateMachine\State.cpp" />
+    <ClCompile Include="vendor\StateMachine\StateMachine.cpp" />
+    <ClCompile Include="vendor\StateMachine\StateMachineInteraction.cpp" />
+    <ClCompile Include="vendor\StateMachine\StateMachineLayer.cpp" />
+    <ClCompile Include="vendor\StateMachine\StateMachinePainter.cpp" />
+    <ClCompile Include="vendor\StateMachine\state_machine_graph.cpp" />
+    <ClCompile Include="vendor\StateMachine\Transition.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\..\Downloads\stb_image.h" />
     <ClInclude Include="Engine\Components\Components.h" />
     <ClInclude Include="Engine\Events\SyEditorCameraMoveToTarget.h" />
+    <ClInclude Include="Engine\Features\Animations\AnimationDataTypes.h" />
     <ClInclude Include="Engine\Features\Events\Tags\SyEventTag.h" />
     <ClInclude Include="Engine\Features\Rendering\RenderPipeline\EditorColliderRenderSystem.h" />
     <ClInclude Include="Engine\Components\ImageBasedLightingComponent.h" />
@@ -862,6 +875,20 @@
     <ClInclude Include="vendor\ImGui\imstb_truetype.h" />
     <ClInclude Include="vendor\DirectXTK\Inc\SimpleMath.h" />
     <ClInclude Include="vendor\nlohmann_json\json.hpp" />
+    <ClInclude Include="vendor\skeletalAnim\AssimpConverter\AssimpConverter.h" />
+    <ClInclude Include="vendor\skeletalAnim\SkeletalAnimation\SkeletalModel.h" />
+    <ClInclude Include="vendor\skeletalAnim\SkeletalAnimation\SkeletalModelSerializer.h" />
+    <ClInclude Include="vendor\skeletalAnim\SkeletalAnimation\Types.h" />
+    <ClInclude Include="vendor\StateMachine\imgui_node_graph_test.h" />
+    <ClInclude Include="vendor\StateMachine\pugiconfig.hpp" />
+    <ClInclude Include="vendor\StateMachine\pugixml.hpp" />
+    <ClInclude Include="vendor\StateMachine\State.h" />
+    <ClInclude Include="vendor\StateMachine\StateMachine.h" />
+    <ClInclude Include="vendor\StateMachine\StateMachineInteraction.h" />
+    <ClInclude Include="vendor\StateMachine\StateMachineLayer.h" />
+    <ClInclude Include="vendor\StateMachine\StateMachinePainter.h" />
+    <ClInclude Include="vendor\StateMachine\state_machine_graph.h" />
+    <ClInclude Include="vendor\StateMachine\Transition.h" />
     <ClInclude Include="vendor\stb_image.h" />
     <ClInclude Include="vendor\WICTextureLoader.h" />
   </ItemGroup>
