--- a/GameEngine/GameEngine.vcxproj.filters
+++ b/GameEngine/GameEngine.vcxproj.filters
@@ -101,6 +101,18 @@
     <ClCompile Include="vendor\ImGui\imgui_impl_win32.cpp" />
     <ClCompile Include="vendor\ImGui\imgui_tables.cpp" />
     <ClCompile Include="vendor\ImGui\imgui_widgets.cpp" />
+    <ClCompile Include="vendor\StateMachine\imgui_node_graph_test.cpp" />
+    <ClCompile Include="vendor\StateMachine\State.cpp" />
+    <ClCompile Include="vendor\StateMachine\state_machine_graph.cpp" />
+    <ClCompile Include="vendor\StateMachine\StateMachine.cpp" />
+    <ClCompile Include="vendor\StateMachine\StateMachineInteraction.cpp" />
+    <ClCompile Include="vendor\StateMachine\StateMachineLayer.cpp" />
+    <ClCompile Include="vendor\StateMachine\StateMachinePainter.cpp" />
+    <ClCompile Include="vendor\StateMachine\Transition.cpp" />
+    <ClCompile Include="vendor\StateMachine\pugixml.cpp" />
+    <ClCompile Include="vendor\skeletalAnim\AssimpConverter\AssimpConverter.cpp" />
+    <ClCompile Include="vendor\skeletalAnim\SkeletalAnimation\SkeletalModel.cpp" />
+    <ClCompile Include="vendor\skeletalAnim\SkeletalAnimation\SkeletalModelSerializer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\..\Downloads\stb_image.h" />
@@ -297,6 +309,21 @@
     <ClInclude Include="Engine\Events\SyEditorCameraMoveToTarget.h" />
     <ClInclude Include="Engine\Scene\Prefab.h" />
     <ClInclude Include="Engine\Scene\Scene.h" />
+    <ClInclude Include="vendor\StateMachine\imgui_node_graph_test.h" />
+    <ClInclude Include="vendor\StateMachine\State.h" />
+    <ClInclude Include="vendor\StateMachine\state_machine_graph.h" />
+    <ClInclude Include="vendor\StateMachine\StateMachine.h" />
+    <ClInclude Include="vendor\StateMachine\StateMachineInteraction.h" />
+    <ClInclude Include="vendor\StateMachine\StateMachineLayer.h" />
+    <ClInclude Include="vendor\StateMachine\StateMachinePainter.h" />
+    <ClInclude Include="vendor\StateMachine\Transition.h" />
+    <ClInclude Include="vendor\StateMachine\pugixml.hpp" />
+    <ClInclude Include="vendor\StateMachine\pugiconfig.hpp" />
+    <ClInclude Include="vendor\skeletalAnim\AssimpConverter\AssimpConverter.h" />
+    <ClInclude Include="vendor\skeletalAnim\SkeletalAnimation\SkeletalModel.h" />
+    <ClInclude Include="vendor\skeletalAnim\SkeletalAnimation\SkeletalModelSerializer.h" />
+    <ClInclude Include="vendor\skeletalAnim\SkeletalAnimation\Types.h" />
+    <ClInclude Include="Engine\Features\Animations\AnimationDataTypes.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="..\..\..\..\Downloads\skybox.jpg" />
