--- a/GameEngine/imgui.ini
+++ b/GameEngine/imgui.ini
@@ -14,14 +14,14 @@ Size=1264,761
 Collapsed=0
 
 [Window][Viewport]
-Pos=300,19
-Size=1620,565
+Pos=297,19
+Size=1623,643
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Hierarchy]
 Pos=0,19
-Size=298,468
+Size=295,477
 Collapsed=0
 DockId=0x0000000E,0
 
@@ -33,7 +33,7 @@ DockId=0x0000000A,0
 
 [Window][DockSpaceViewport_11111111]
 Pos=0,19
-Size=1920,1042
+Size=1920,1061
 Collapsed=0
 
 [Window][Title bar Hovered/Active tests]
@@ -42,14 +42,14 @@ Size=472,61
 Collapsed=0
 
 [Window][Content Browser]
-Pos=300,586
-Size=1620,475
+Pos=297,664
+Size=1623,416
 Collapsed=0
 DockId=0x0000000D,1
 
 [Window][Properties]
-Pos=0,489
-Size=298,572
+Pos=0,498
+Size=295,582
 Collapsed=0
 DockId=0x0000000F,0
 
@@ -105,8 +105,8 @@ Size=339,324
 Collapsed=0
 
 [Window][Console Output]
-Pos=300,586
-Size=1620,475
+Pos=297,664
+Size=1623,416
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -114,6 +114,16 @@ DockId=0x0000000D,0
 Pos=450,274
 Size=311,105
 Collapsed=0
+
+[Window][Example: Custom Node Graph]
+Size=700,600
+Collapsed=0
+
+[Window][State Machine Graph]
+Pos=297,19
+Size=1623,643
+Collapsed=0
+DockId=0x00000006,1
 
 [Table][0xC9935533,3]
 Column 0  Weight=1.0000
@@ -213,19 +223,19 @@ Column 1  Weight=1.0000
 Column 2  Weight=1.0000
 
 [Docking][Data]
-DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=-309,109 Size=1920,1042 Split=X
-  DockNode          ID=0x00000003 Parent=0x8B93E3BD SizeRef=298,701 Split=Y Selected=0x29EABFBD
+DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=8,50 Size=1920,1061 Split=X
+  DockNode          ID=0x00000003 Parent=0x8B93E3BD SizeRef=295,701 Split=Y Selected=0x29EABFBD
     DockNode        ID=0x0000000E Parent=0x00000003 SizeRef=248,468 Selected=0x29EABFBD
     DockNode        ID=0x0000000F Parent=0x00000003 SizeRef=248,572 Selected=0x199AB496
-  DockNode          ID=0x00000004 Parent=0x8B93E3BD SizeRef=1620,701 Split=Y
+  DockNode          ID=0x00000004 Parent=0x8B93E3BD SizeRef=1623,701 Split=Y
     DockNode        ID=0x00000001 Parent=0x00000004 SizeRef=1280,396 Split=X
       DockNode      ID=0x00000007 Parent=0x00000001 SizeRef=453,720 Split=Y Selected=0x29EABFBD
         DockNode    ID=0x00000009 Parent=0x00000007 SizeRef=189,374 Selected=0x29EABFBD
         DockNode    ID=0x0000000A Parent=0x00000007 SizeRef=189,371 Selected=0xE1FDE0B9
       DockNode      ID=0x00000008 Parent=0x00000001 SizeRef=486,720 Split=Y Selected=0x13926F0B
-        DockNode    ID=0x00000005 Parent=0x00000008 SizeRef=1030,521 Split=X Selected=0x13926F0B
-          DockNode  ID=0x00000006 Parent=0x00000005 SizeRef=806,396 CentralNode=1 HiddenTabBar=1 Selected=0x13926F0B
+        DockNode    ID=0x00000005 Parent=0x00000008 SizeRef=1030,580 Split=X Selected=0x13926F0B
+          DockNode  ID=0x00000006 Parent=0x00000005 SizeRef=806,396 CentralNode=1 Selected=0x13926F0B
           DockNode  ID=0x0000000C Parent=0x00000005 SizeRef=227,396 Selected=0xE87781F4
-        DockNode    ID=0x0000000D Parent=0x00000008 SizeRef=1030,475 Selected=0xBF096F38
+        DockNode    ID=0x0000000D Parent=0x00000008 SizeRef=1030,416 Selected=0xBF096F38
     DockNode        ID=0x00000002 Parent=0x00000004 SizeRef=1280,303 Selected=0x199AB496
 
