--- a/GameEngine/GameEngine.vcxproj
+++ b/GameEngine/GameEngine.vcxproj
@@ -655,6 +655,7 @@
     <ClCompile Include="Engine\Systems\SkyboxSystem.cpp" />
     <ClCompile Include="Engine\Features\Particles\Systems\ParticlesSystem.cpp" />
     <ClCompile Include="Engine\Features\Rendering\RenderPipeline\ParticleRenderSystem.cpp" />
+    <ClCompile Include="Engine\Features\Animations\Systems\SkeletalAnimationSystem.cpp" />
     <ClCompile Include="vendor\Delegates.cpp" />
     <ClCompile Include="vendor\ImGuizmo\GraphEditor.cpp" />
     <ClCompile Include="vendor\ImGuizmo\ImCurveEdit.cpp" />
@@ -686,6 +687,8 @@
     <ClInclude Include="Engine\Components\Components.h" />
     <ClInclude Include="Engine\Events\SyEditorCameraMoveToTarget.h" />
     <ClInclude Include="Engine\Features\Animations\AnimationDataTypes.h" />
+    <ClInclude Include="Engine\Features\Animations\Bone.h" />
+    <ClInclude Include="Engine\Features\Animations\SkeletalAnimation.h" />
     <ClInclude Include="Engine\Features\Events\Tags\SyEventTag.h" />
     <ClInclude Include="Engine\Features\Rendering\RenderPipeline\EditorColliderRenderSystem.h" />
     <ClInclude Include="Engine\Components\ImageBasedLightingComponent.h" />
@@ -806,6 +809,7 @@
     <ClInclude Include="Engine\Features\Particles\Systems\ParticlesSystem.h" />
     <ClInclude Include="Engine\Systems\SkyboxSystem.h" />
     <ClInclude Include="Engine\Features\Rendering\RenderPipeline\ParticleRenderSystem.h" />
+    <ClInclude Include="Engine\Features\Animations\Systems\SkeletalAnimationSystem.h" />
     <ClInclude Include="vendor\Delegates.h" />
     <ClInclude Include="vendor\entt\core\algorithm.hpp" />
     <ClInclude Include="vendor\entt\core\any.hpp" />
