--- a/GameEngine/GameEngine.vcxproj.filters
+++ b/GameEngine/GameEngine.vcxproj.filters
@@ -113,6 +113,7 @@
     <ClCompile Include="vendor\skeletalAnim\AssimpConverter\AssimpConverter.cpp" />
     <ClCompile Include="vendor\skeletalAnim\SkeletalAnimation\SkeletalModel.cpp" />
     <ClCompile Include="vendor\skeletalAnim\SkeletalAnimation\SkeletalModelSerializer.cpp" />
+    <ClCompile Include="Engine\Features\Animations\Systems\SkeletalAnimationSystem.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\..\Downloads\stb_image.h" />
@@ -324,6 +325,9 @@
     <ClInclude Include="vendor\skeletalAnim\SkeletalAnimation\SkeletalModelSerializer.h" />
     <ClInclude Include="vendor\skeletalAnim\SkeletalAnimation\Types.h" />
     <ClInclude Include="Engine\Features\Animations\AnimationDataTypes.h" />
+    <ClInclude Include="Engine\Features\Animations\Bone.h" />
+    <ClInclude Include="Engine\Features\Animations\Systems\SkeletalAnimationSystem.h" />
+    <ClInclude Include="Engine\Features\Animations\SkeletalAnimation.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="..\..\..\..\Downloads\skybox.jpg" />
