--- a/GameEngine/imgui.ini
+++ b/GameEngine/imgui.ini
@@ -236,6 +236,6 @@ DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=32,32 Split=X
         DockNode    ID=0x00000005 Parent=0x00000008 SizeRef=1030,565 Split=X Selected=0x13926F0B
           DockNode  ID=0x00000006 Parent=0x00000005 SizeRef=806,396 CentralNode=1 Selected=0x13926F0B
           DockNode  ID=0x0000000C Parent=0x00000005 SizeRef=227,396 Selected=0xE87781F4
-        DockNode    ID=0x0000000D Parent=0x00000008 SizeRef=1030,494 Selected=0x1A309617
+        DockNode    ID=0x0000000D Parent=0x00000008 SizeRef=1030,494 Selected=0xBF096F38
     DockNode        ID=0x00000002 Parent=0x00000004 SizeRef=1280,303 Selected=0x199AB496
 
