--- a/MonoLayer/MonoLayer.csproj
+++ b/MonoLayer/MonoLayer.csproj
@@ -50,6 +50,7 @@
         <Compile Include="Core\EEngineCompId.cs" />
         <Compile Include="Core\Helpers\CollectionsExt.cs" />
         <Compile Include="Core\Helpers\TypesExt.cs" />
+        <Compile Include="Core\ProxyComps\ProxyParticlesComp.cs" />
         <Compile Include="Core\ProxyComps\ProxyColliderComp.cs" />
         <Compile Include="Core\ProxyComps\ProxyLightComp.cs" />
         <Compile Include="Core\ProxyComps\ProxyRigidComp.cs" />
@@ -58,6 +59,7 @@
         <Compile Include="Core\Resources\EResourceType.cs" />
         <Compile Include="Core\Resources\ResHelper.cs" />
         <Compile Include="Core\Resources\ResCubemap.cs" />
+        <Compile Include="Core\Resources\ResTexture.cs" />
         <Compile Include="Core\Resources\SyResManager.cs" />
         <Compile Include="Core\Resources\ResMaterial.cs" />
         <Compile Include="Core\Resources\ResBase.cs" />
@@ -89,6 +91,7 @@
         <Compile Include="Editor\Drawers\EditorDrawerColor.cs" />
         <Compile Include="Editor\Drawers\EditorDrawerComp.cs" />
         <Compile Include="Editor\Drawers\EditorDrawerCompLight.cs" />
+        <Compile Include="Editor\Drawers\EditorDrawerParticlesBurst.cs" />
         <Compile Include="Editor\Drawers\EditorDrawerReflect.cs" />
         <Compile Include="Editor\Drawers\EditorDrawerEnum.cs" />
         <Compile Include="Editor\Drawers\EditorDrawerFloat.cs" />
@@ -110,7 +113,7 @@
         <Compile Include="LeoEcs\worlds.cs" />
         <Compile Include="Logger\SyLog.cs" />
         <Compile Include="Logger\SyProxyLogger.cs" />
-        <Compile Include="Properties\AssemblyInfo.cs"/>
+        <Compile Include="Properties\AssemblyInfo.cs" />
         <Compile Include="Serialization\Serializer.cs" />
         <Compile Include="Serialization\Serializers\SerializerArray.cs" />
         <Compile Include="Serialization\Serializers\SerializerBool.cs" />
